Closed Bug 1615548 Opened 5 years ago Closed 5 years ago

Clicking the location field when the focus is in an out-of-process iframe leaves the OOP iframe thinking it has focus

Categories

(Core :: DOM: UI Events & Focus Handling, defect, P2)

defect

Tracking

()

VERIFIED FIXED
mozilla76
Fission Milestone M6
Tracking Status
firefox76 --- verified

People

(Reporter: hsivonen, Assigned: hsivonen)

References

Details

Attachments

(1 file)

Steps to reproduce

  1. Enable Fission (once bug 1556627 has landed)
  2. Navigate to https://hsivonen.fi/fission-host.html
  3. Click a text field inside an iframe.
  4. Click the location bar.
  5. Press a keyboard key.

Actual results

Both the location bar and the text field in the iframe look focused and paint a blinking cursor. The keystrokes go to the location bar.

Expected results

Expected the text field in the iframe not to look focused and not to paint a text insertion point bar.

Priority: -- → P2
Fission Milestone: --- → M6
Blocks: 1617222
Blocks: 1612839
Blocks: 1612842
Blocks: 1612844
Blocks: 1613031
Blocks: 1613717
Blocks: 1613899
Blocks: 1615544
Blocks: 1616772
Pushed by hsivonen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/40a8e53748dd Blur OOP iframes when focus moves to chrome. r=NeilDeakin
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
No longer blocks: 1613717
No longer blocks: 1616772
No longer blocks: 1615544

Reproduced the issue using Firefox 75.0a1 (20200219215002) on Windows 10x64.
The issue is verified fixed with Firefox 76.0a1 (20200312035749) from comment 5 on Windows 10x64.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: