Bug 1615548 - Blur OOP iframes when focus moves to chrome.

Differential Revision: https://phabricator.services.mozilla.com/D65090